[package]
name = "gabs"
version = "0.1.5"
edition = "2021"
description = "Gabriel's Blog System"
license = "MIT"
homepage = "https://github.com/gboncoffee/gabs"
repository = "https://github.com/gboncoffee/gabs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.18.0"
